[tool.poetry]
name = "pycon-dom-rf"
version = "0.1.0"
description = ""
authors = ["burchalovskiy <burchalovskiy@gmail.com>"]
readme = "README.md"
packages = [{include = "pycon_dom_rf"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
